[GTK][a11y] Test /webkit/WebKitAccessibility/accessible/children-changed times out https://bugs.webkit.org/show_bug.cgi?id=236070

Reviewed by Adrian Perez de Castro.

This happens because when the new node is added the a11y object children are not updated and the wrapper for the
new child is not created.

* accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification): Call updateChildrenIfNecessary on AXChildrenChanged.


Canonical link: https://commits.webkit.org/246753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289046 268f45cc-cd09-0410-ab3c-d52691b4dbfc